@@ -1,4 +1,4 @@
 @echo off
 cd /d "%~dp0"
-start "" "..\java\bin\javaw.exe" --enable-preview -cp "lib/*;out" Main
+start "" "..\java\bin\javaw.exe" -cp "lib/*;out" Main
 exit /b 0
